--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,137 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+* {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: black;
+}
 h1 {
-    color: #1a8cd3;
+  font-family: "Montserrat", sans-serif;
+  font-size: 5vw;
+}
+#initial {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#or {
+  font-size: 2vw;
+}
+#roomUniqueId {
+  width: 29vw;
+  border-radius: 10px;
+  aspect-ratio: 8 / 1;
+  margin-bottom: 20px;
+  color: black;
+  font-size: 2vw;
+}
+#gamePlay {
+  font-size: 2vw;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+#opponentState {
+  margin: 0;
+}
+#winnerArea {
+  font-size: 5vw;
+}
+#continueButton {
+  margin: 20px auto;
+}
+#player1Choice,
+#player2Choice {
+  display: flex;
+  justify-content: space-around;
+  width: 100vw;
+}
+#waitingArea {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (max-width: 440px) {
 }
 
+.glow-on-hover {
+  font-size: 1.5vw;
+  width: 30vw;
+  aspect-ratio: 8 / 1;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+}
 
+.glow-on-hover:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+.glow-on-hover:active {
+  color: #000;
+}
+
+.glow-on-hover:active:after {
+  background: transparent;
+}
+
+.glow-on-hover:hover:before {
+  opacity: 1;
+}
+
+.glow-on-hover:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
